# noctalia-dictation

./: .editorconfig  .gitignore  .mise.toml  AGENTS.md  BarWidget.qml  Main.qml  Panel.qml  README.md  Settings.qml  TranscriptOverlay.qml  asr_common.py  asr_sherpa.py  dictation_backend.py  download_models.sh  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
backend/: __init__.py  config.py  diagnostics.py  paths.py  server.py
backend/engines/: base.py  registry.py
backend/engines/faster_whisper/: __init__.py  engine.py  session.py
backend/engines/sherpa/: __init__.py  engine.py  packs.py  session.py  vad.py
backend/ipc/: status.py
backend/output/: injection.py
backend/transcript/: __init__.py  clean.py
i18n/: en.json
scripts/: qmltooling.py
ui/: BarWidget.qml  BarWidgetSettings.qml  Main.qml  Panel.qml  Settings.qml  TranscriptOverlay.qml
